[gd_scene format=3 uid="uid://ey6fj33i2pst"]

[ext_resource type="Script" uid="uid://20uhlt0dx2q8" path="res://src/ui/complex_dialog/dialogue_system.gd" id="1_21mdk"]
[ext_resource type="FontFile" uid="uid://dk4rc8edrx4rd" path="res://fonts/Pixel_Operator/PixelOperator-Bold.ttf" id="1_gsjv7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21mdk"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21mdk"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 0.0

[node name="DialogueSystem" type="Node2D" unique_id=1569683415]
process_mode = 1
z_index = 4096
script = ExtResource("1_21mdk")

[node name="Panel" type="Panel" parent="." unique_id=963186123]
offset_left = -144.0
offset_top = -28.0
offset_right = 144.0
offset_bottom = 28.0
theme_override_styles/panel = SubResource("StyleBoxFlat_21mdk")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1853946299]
offset_left = -144.0
offset_top = -28.0
offset_right = 144.0
offset_bottom = 28.0

[node name="SpeakerParent" type="Control" parent="HBoxContainer" unique_id=1235347039]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="SpeakerSprite" type="Sprite2D" parent="HBoxContainer/SpeakerParent" unique_id=2128957327]
position = Vector2(37.5, -1)
scale = Vector2(0.125, 0.125)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=1501866499]
layout_mode = 2
size_flags_horizontal = 3

[node name="DialogueLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer" unique_id=1791115249]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("1_gsjv7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_21mdk")
bbcode_enabled = true
scroll_active = false
visible_characters_behavior = 1

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=1213518056]
visible = false
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=341064714]
max_polyphony = 1000

[node name="SpeakerNameLabel" type="Label" parent="." unique_id=1520749437]
offset_left = -64.0
offset_top = -49.0
offset_right = 138.0
offset_bottom = -32.0
theme_override_fonts/font = ExtResource("1_gsjv7")
